--- a/css/style.css
+++ b/css/style.css
@@ -342,6 +342,24 @@ button {
           box-shadow: 0 0 0 2px rgba(255, 255, 255, 0.75);
 }
 
+.btn_container{
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+}
+
+.btnplus {
+  border-radius: 8px;
+  color: #fff;
+  border: none;
+  position: relative;
+  width: 100%;
+  height: 40px;
+  margin-top: 20px;
+  margin-right: 10px;
+  margin-left: 10px;
+  background-image: linear-gradient(180deg, #a787c7 0%, #764ba2 100%);  
+}
 .btn.generate {
   -webkit-user-select: none;
      -moz-user-select: none;
@@ -350,7 +368,8 @@ button {
   position: relative;
   width: 100%;
   height: 40px;
-  margin: 10px 0;
+  margin-right: 20px;
+  margin-left: 20px;
   border-radius: 8px;
   color: #fff;
   border: none;
